--- a/src/main/res/layout/activity_discover_and_stream.xml
+++ b/src/main/res/layout/activity_discover_and_stream.xml
@@ -12,7 +12,7 @@
         android:id="@+id/lblDetectTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/deviceType"
+        android:text="@string/select_device_type"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
     <RadioGroup
@@ -35,10 +35,10 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_discover_and_stream"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/findAndStream"/>
+        android:text="@string/find_and_stream"/>
 
     <TextView
         android:id="@+id/txtStatus"
